[package]
name = "imgchest-sync"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
argh = "0.1.13"
base16ct = { version = "0.3.0", features = [ "alloc" ] }
camino = { version = "1.1.12", features = ["serde1"] }
directories = "6.0.0"
imgchest = { git = "https://github.com/nathaniel-daniel/imgchest-rs", version = "0.0.0", default-features = false }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0" }
opener = "0.8.2"
rayon = "1.11.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = [ "derive" ] }
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = [ "rt-multi-thread" ] }
toml = "0.9.5"
toml_edit = "0.23.4"

[features]
default = [ "rustls-tls" ]

native-tls = [ "imgchest/native-tls" ]
rustls-tls = [ "imgchest/rustls-tls" ]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
