[package]
name = "imgchest-sync"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
base16ct = { version = "0.3.0", features = [ "alloc" ] }
camino = { version = "1.2.1", features = [ "serde1" ] }
directories = "6.0.0"
imgchest = { git = "https://github.com/nathaniel-daniel/imgchest-rs", version = "0.0.0", default-features = false }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0" }
opener = "0.8.3"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = [ "derive" ] }
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = [ "rt-multi-thread" ] }
toml = "0.9.8"
toml_edit = "0.23.7"

[features]
default = [ "rustls-tls" ]

native-tls = [ "imgchest/native-tls" ]
rustls-tls = [ "imgchest/rustls-tls" ]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
