[package]
name = "imgchest-sync"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
argh = "0.1.19"
base16ct = { version = "1.0.0", features = [ "alloc" ] }
camino = { version = "1.2.3", features = [ "serde1" ] }
digest-io = "0.1.0"
directories = "6.0.0"
imgchest = { git = "https://github.com/nathaniel-daniel/imgchest-rs", version = "0.0.0", default-features = false }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0" }
opener = "0.8.5"
rayon = "1.12.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = [ "derive" ] }
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = [ "rt-multi-thread" ] }
toml = "1.1.2"
toml_edit = "0.25.12"

[features]
default = [ "rustls" ]

native-tls = [ "imgchest/native-tls" ]
rustls = [ "imgchest/rustls" ]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
